--- a/package.json
+++ b/package.json
@@ -13,5 +13,12 @@
   },
   "scripts": {
     "start": "node ./app.js"
+  },
+  "devDependencies": {
+    "eslint": "^8.39.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-promise": "^6.1.1"
   }
 }
